[package]
name = "roguard"
version = "0.1.0"
edition = "2021"

[dependencies]
# 通用
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# roguard
regex = "1.10"

# sigscan
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1.0"
libc = "0.2"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
walkdir = "2.5"
